--- a/less/navigation.less
+++ b/less/navigation.less
@@ -32,6 +32,7 @@ nav {
   @media only screen and @desktop {
     .nav-elements {
       width: 800px;
+      padding: 0 165px;
       margin: auto;
     }
   }
